# vibe-engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
data/: vehicles.ron
src/: constants.rs  controls.rs  crowd.rs  engine.rs  io.rs  lib.rs  physics.rs  player.rs  state.rs  vehicle.rs
src/bridge/: controls.rs  dev.rs  input.rs  mod.rs  snapshot.rs
src/character/: mod.rs
src/crowd/: mod.rs
src/traffic/: mod.rs
src/vehicle/: mod.rs  spec.rs
src/world/: chunks.rs  mod.rs
tests/: assists.rs  chunks.rs  classes.rs  damage.rs  dev.rs  drive.rs  enter_exit.rs  stability.rs  time.rs  traffic.rs  walk.rs
